# http_server

./: .gitignore  CMakeLists.txt  README.md
cgi-bin/: script_GET.pl  script_POST.pl  script_cgi.pl
src/: Client.cpp  Client.h  HandleRequest.cpp  Message.cpp  Message.h  Message_new.h  RequestHandlers.cpp  RequestHandlers.h  Router.cpp  Server.h  Uri.h  goodbyeWorld.html  main.cpp  server.conf  server.cpp
test/: .htaccess  Client.cpp  Makefile  TestRequestHandler.cpp  TestServer.cpp
virtualhost1/: yay.html
virtualhost1/cgi-bin/: script_GET.pl  script_POST.pl
virtualhost2/: goodbyeWorld.html  goodbyeWorld_m.html
